- finished doing saving profile photos and deleting profiles photos in FileStorage - refactored downloadProfilePhoto()